--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
     - Color Palette
     - General Structure
     - Header and Main Navigation
-        + Hero Image
+        + Banner
     - Primary Content
     - Secondary Content
     - Footer
@@ -21,16 +21,13 @@
     --raisin-black: #232020ff;
     }
     :root {
-    --radical-red: #ff0054ff;
-    }
-    :root {
-    --orange-pantone: #ff5400ff;
-    }
-    :root {
-    --amber: #ffbd00ff;
+    --light-periwinkle: #d1d7f0;
     }
     :root {
     --amazon: #417b5a;
+    }
+    :root {
+    --yellow-green-crayola: #c3d898;
     }
 
 
@@ -57,6 +54,17 @@ p {
     font-size: 16px;
 }
 
+.flex {
+    display: flex;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.justify-content {
+    justify-content: space-between;
+}
 
     
 /*  ==========================
@@ -67,16 +75,16 @@ p {
     background-color: var(--raisin-black);
     color: #fff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding: 20px;
+    font-size: 20px;
+    padding: 40px;
 }
 
 .header h1 {
-    display: inline-block;
-    font-size: 48px;
+    font-size: 32px;
 }
 
 .header nav {
-    float: right;
+    
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     margin-right: 20px;
@@ -85,25 +93,47 @@ p {
 
 .header nav ul {
     list-style-type: none;
-}
+    margin: 0;
+    padding: 0;
+  }
+  
+  .header nav li {
+    float: left;
+  }
+  
+  .header nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
+    background-color: #111;
+  }
 
-.header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
 
-/*  ----------
-    Hero Image
-    ---------- */
+/*  ------
+    Banner
+    ------ */
 
-.hero {
-    background-image: url("../images/headshot.jpeg");
+.banner {
+    background-color: var(--amazon);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-    height: 800px;
-    margin-bottom: 25px;
+    height: 500px;
+    margin-bottom: 2px;
     width: 100%;
+    
+}
+
+.banner h1 {
+    color: #fff;
+    text-align: center;
+    font-size: 85px;
+    margin-top: 350px;
 }
 
 
@@ -111,16 +141,49 @@ p {
     Primary Content
     =============== */
 
+.main {
+    /* flex-wrap: wrap; */
+    flex-direction: column;
+    margin: 50px;
+    background-color: var(--light-periwinkle);
+    /* background-color: var(--blue-yonder); */
+}
 
+.main section {
+    flex-direction: row;
+    /* background-color: brown; */
+    color: var(--raisin-black);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    height: 200px;
+    margin: 30px; 
+    padding: 10px;
+}
 
+.title {
+    margin-left: 20px;
+}
+
+.content {
+    
+}
+
+.main h2 {
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+
+.main img {
+    max-height: 200px;
+}
 
 
 /*  =================
     Secondary Content
     ================= */
     
-    
-
+.text {
+    float: right;
+}
 
 
 
