--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,6 @@
     - Header and Main Navigation
         + Banner
     - Primary Content
-    - Secondary Content
-    - Footer
 
     ************************************************  */
 
@@ -54,18 +52,6 @@ p {
     font-size: 16px;
 }
 
-.flex {
-    display: flex;
-}
-
-.align-center {
-    align-items: center;
-}
-
-.justify-content {
-    justify-content: space-between;
-}
-
     
 /*  ==========================
     Header and Main Navigation
@@ -76,15 +62,19 @@ p {
     color: #fff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20px;
-    padding: 40px;
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
 }
 
 .header h1 {
     font-size: 32px;
+    text-align: center;
 }
 
 .header nav {
-    
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     margin-right: 20px;
@@ -109,7 +99,7 @@ p {
     text-decoration: none;
   }
   
-  li a:hover {
+  .header nav li a:hover {
     background-color: #111;
   }
 
@@ -142,52 +132,135 @@ p {
     =============== */
 
 .main {
-    /* flex-wrap: wrap; */
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    margin: 50px;
+    margin: 75px;
+    height: auto;
     background-color: var(--light-periwinkle);
     /* background-color: var(--blue-yonder); */
 }
 
 .main section {
+    display: flex;
     flex-direction: row;
     /* background-color: brown; */
     color: var(--raisin-black);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    height: 200px;
+    height: auto;
     margin: 30px; 
-    padding: 10px;
-}
-
-.title {
-    margin-left: 20px;
-}
-
-.content {
-    
+    padding: 35px;
 }
 
 .main h2 {
-    font-size: 35px;
+    font-size: 55px;
     margin-bottom: 20px;
+    margin-top: 10px;
+    text-align: center;
 }
 
-.main img {
-    max-height: 200px;
+.card {
+
 }
 
-
-/*  =================
-    Secondary Content
-    ================= */
-    
-.text {
-    float: right;
+.title {
+    width: 15%;
+    margin-left: 40px;
+    padding: 10px;
 }
 
+.content {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    width: 85%;
+    padding: 40px;
+    text-align: center;
+    line-height: 30px;
+}
 
+.column {
+    flex-direction: column;
+}
 
-/*  ======
-    Footer
-    ====== */
+.row {
+    flex-direction: row;
+}
+
+#first-app a {
+    display: inline-block;
+    width: 1000px;
+    height: 700px;
+}
+
+#first-app img {
+    width: 1000px;
+    height: 700px;
+}
+
+.img {
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: space-around;
+    float: left;
+    object-fit: cover; 
+    background-color: #000;
+}
+
+.img a {
+    height: 250px;
+}
+
+.img a img {
+    width: 500px;
+    height: 250px;
+    opacity: 0.4;
+    transition: opacity .5s ease;
+}
+ 
+.img img:hover {
+    opacity: 1;
+} 
+
+.img a p {
+    position: relative;
+    left: 18px;
+    bottom: 60px;
+    width: 100px;
+    border: 2px solid #000;
+    background-color: #576CA8;
+}
+
+.contact section {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+    margin-right: 30px;
+}
+
+.contact section ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .contact section li {
+    float: left;
+    margin-right: 40px;
+  }
+  
+  .contact section li a {
+    display: block;
+    color: var(--raisin-black);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .contact section li a:hover {
+    background-color: #b2bce6;
+  }
+  
 
