--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,8 @@ p {
     flex-wrap: wrap;
     flex-direction: column;
     margin: 75px;
+    padding-top: 40px;
+    padding-bottom: 20px;
     height: auto;
     background-color: var(--light-periwinkle);
     /* background-color: var(--blue-yonder); */
@@ -148,8 +150,7 @@ p {
     color: var(--raisin-black);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     height: auto;
-    margin: 30px; 
-    padding: 35px;
+    margin: 1px; 
 }
 
 .main h2 {
@@ -202,6 +203,8 @@ p {
 }
 
 .img {
+    position: relative;
+    right: 75px;
     display: flex; 
     flex-wrap: wrap;
     justify-content: space-around;
@@ -263,4 +266,3 @@ p {
     background-color: #b2bce6;
   }
   
-
