--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,6 @@ p {
     height: 500px;
     margin-bottom: 2px;
     width: 100%;
-    
 }
 
 .banner h1 {
@@ -124,6 +123,24 @@ p {
     text-align: center;
     font-size: 85px;
     margin-top: 350px;
+}
+
+#selfie {
+    height: 100%;
+    width: 600px;
+    position: absolute;
+    left: 650px;
+    padding: 20px;
+}
+
+#selfie img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
+    /* max-width: 500px;
+    height: auto; */
 }
 
 
@@ -158,10 +175,6 @@ p {
     margin-bottom: 20px;
     margin-top: 10px;
     text-align: center;
-}
-
-.card {
-
 }
 
 .title {
